# Genai

./: README.md
backend/: .env.example  README.md  pyproject.toml  pytest.ini
backend/app/agents/: reflection.py  tools.py  workflow.py
backend/app/api/v1/endpoints/: auth.py  feedback.py  inputs.py  planner.py
backend/app/core/: database.py
backend/app/models/: feedback_event.py
backend/app/schemas/: auth.py  contracts.py
backend/app/services/: cognito_auth.py  constraint_parser.py  input_jobs.py  planner.py  planner_execution.py
backend/tests/: conftest.py  test_adk_workflow.py  test_e2e_agentic_full_flow.py  test_feedback_phase4.py  test_planner_phase3.py  test_recipe_api_tools.py
docs/: HACKATHON_SUBMISSION.md
docs/agents/: agent-spec.md
docs/api/: endpoint-catalog.md  openapi-contract.md
docs/architecture/: agent-orchestration-architecture.html  backend-system-design.md
frontend/src/app/: globals.css  layout.js
frontend/src/app/auth/: page.js
frontend/src/app/dashboard/: page.js
frontend/src/app/dashboard/profile/: page.js
frontend/src/app/dashboard/scan/fridge/: layout.js
frontend/src/app/onboarding/: layout.js  page.js
frontend/src/components/scan/: DetectedIngredientList.js
frontend/src/components/welcome/: CtaSection.js  FeaturesGrid.js  HeroSection.js
frontend/src/lib/: api.js  constants.js
