[project]
name = "eco-health-agentic-dietitian-backend"
version = "0.1.0"
description = "Backend MVP for Eco-Health Agentic Dietitian"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "google-adk>=1.18.0",
    "google-genai>=1.20.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: real end-to-end tests that require external providers/network",
]
